8269074: (fs) Files.copy fails to copy from /proc on some linux kernel versions